--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "bulma": "^0.9.3",
     "ethers": "^5.5.3",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
