--- a/.github/deploy_web.yml
+++ b/.github/deploy_web.yml
@@ -9,11 +9,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install Node.js LTS
+      - name: Install Node.js 14
         uses: actions/setup-node@v1
+        with:
+          node_version: "14"
+          cache: "npm"
 
+      - run: npm install
       - name: Build and deploy
-        run: |
-          npm install
           npm run build
           make deploy
