--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -13,11 +13,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node_version: "14"
-          cache: "npm"
+          cache: "yarn"
 
-      - run: npm install
+      - run: yarn install
 
       - name: Build and deploy
         run: |
-          npm run build
+          yarn build
           make deploy
