--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Install Node.js 14
         uses: actions/setup-node@v1
         with:
-          node_version: 14
+          node-version: 14
           cache: "yarn"
 
       - run: yarn install
