--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Build and deploy
         run: |
           yarn build
-          make deploy
+          aws s3 cp ./build s3://mc-speed-limit --recursive
