--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -18,6 +18,8 @@ jobs:
       - run: yarn install
 
       - name: Build and deploy
+        env: |
+          AWS_DEFAULT_REGION=us-east-1
         run: |
           yarn build
           aws s3 cp ./build s3://mc-speed-limit --recursive
