--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Build and deploy
         env:
           AWS_DEFAULT_REGION: us-east-1
+          AWS_ACCESS_KEY_ID: secrets.AWS_ACCESS_KEY_ID
+          AWS_SECRET_ACCESS_KEY: secrets.AWS_SECRET_ACCESS_KEY
+          REACT_APP_SNOWTRACE_API_KEY: secrets.REACT_APP_SNOWTRACE_API_KEY
         run: |
           yarn build
           aws s3 cp ./build s3://mc-speed-limit --recursive
