--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "bulma": "^0.9.3",
+    "eth-chains": "^0.4.0",
     "ethers": "^5.5.3",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
