only run deploy on merge main

--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -1,6 +1,9 @@
 name: Deploy to S3 Bucket
 
-on: [workflow_dispatch, push]
+on:
+  workkflow_dispatch:
+  push:
+    branches: main
 
 jobs:
   build:
